--- a/regserver/regulations/static/regulations/css/less/module/permalink.less
+++ b/regserver/regulations/static/regulations/css/less/module/permalink.less
@@ -29,7 +29,7 @@ p {
     background: url(../img/permalink.png) no-repeat;
     background-color: transparent;
     background-size: 16px 16px;
-    z-index: 500;
+    z-index: 100;
 }
 
 /* 
